--- a/src/components/_footer.html
+++ b/src/components/_footer.html
@@ -1,3 +1,5 @@
-<footer>
-  
+<footer class="footer">
+  <div class="container">
+    <img src="images/footer-logos.png" alt="Платёжные системы" class="footer__image">
+  </div>
 </footer>
