--- a/src/components/_head.html
+++ b/src/components/_head.html
@@ -2,7 +2,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Julee&family=Notable&family=Noto+Sans:wght@700&family=Roboto+Condensed:wght@400;700&family=Roboto:wght@400;500&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/libs.min.css" />
   <link rel="stylesheet" href="css/style.min.css" />
-  <title>Document</title>
+  <title>L2Pts.Com</title>
 </head>
