--- a/src/components/_header.html
+++ b/src/components/_header.html
@@ -1,3 +1,15 @@
-<header>
-
+<header class="header">
+  <div class="container container--p45">
+    <div class="header__inner flex">
+      <div class="header__status header__status--online">
+        Онлайн
+      </div>
+      <span class="header__online-counter">1450</span>
+      <div class="header__button-wrapper button-wrapper flex">
+        <a href="#" class="header__btn yellow-btn btn--s">Создать аккаунт</a>
+        <a href="#" class="header__btn yellow-btn btn--s">Форум</a>
+        <a href="#" class="header__btn yellow-btn btn--s">Войти в аккаунт</a>
+      </div>
+    </div>
+  </div>
 </header>
