--- a/src/components/_head.html
+++ b/src/components/_head.html
@@ -6,6 +6,7 @@
     href="https://fonts.googleapis.com/css2?family=Julee&family=Notable&family=Noto+Sans:wght@700&family=Roboto+Condensed:wght@400;700&family=Roboto:wght@400;500&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;500&display=swap" rel="stylesheet">
+  <link rel="preload" href="images/videoplayback.mp4" as="video">
   <link rel="stylesheet" href="css/libs.min.css" />
   <link rel="stylesheet" href="css/style.min.css" />
   <title>L2Pts.Com</title>
