--- a/src/components/_header.html
+++ b/src/components/_header.html
@@ -7,7 +7,7 @@
       <span class="header__online-counter">1450</span>
       <div class="header__button-wrapper button-wrapper flex">
         <a href="#" class="header__btn yellow-btn btn--s">Создать аккаунт</a>
-        <a href="#" class="header__btn yellow-btn btn--s">Форум</a>
+        <a href="#" class="header__btn yellow-btn yellow-btn--transparent btn--s">Форум</a>
         <a href="#" class="header__btn yellow-btn btn--s">Войти в аккаунт</a>
       </div>
     </div>
